@@ -1,3 +1,8 @@
+2002-06-07  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/tcltest.test:  More corrections to test suite so that tests
+	of failing [test]s don't show up themselves as failing tests.
+
 2002-06-07  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* generic/tclExecute.c: Tidied up headers in relation to float.h
